--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ dirs = "5"
 open = "5"
 env_logger = "0.11"
 anyhow = "1"
-console = "0.15"
+ratatui = "0.26"
+crossterm = "0.27"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 fuzzy-matcher = "0.3"
