--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ urlencoding = "2"
 sha1 = "0.10"
 winreg = "0.52"
 windows = { version = "0.58", features = [
+    "Win32_Foundation",
+    "Win32_Security",
+    "Win32_Security_Authorization",
     "Win32_System_Com",
     "Win32_System_Com_StructuredStorage",
     "Win32_System_WinRT",
