--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ windows = { version = "0.58", features = [
     "Win32_Security_Authorization",
     "Win32_System_Com",
     "Win32_System_Com_StructuredStorage",
+    "Win32_System_Console",
     "Win32_System_WinRT",
     "Win32_System_LibraryLoader",
     "Win32_System_Threading",
