--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,6 @@ windows = { version = "0.58", features = [
     "Win32_System_Com",
     "Win32_System_Com_StructuredStorage",
     "Win32_System_Console",
-    "Win32_System_WinRT",
     "Win32_System_LibraryLoader",
     "Win32_System_Threading",
     "Win32_UI_Shell",
@@ -37,13 +36,7 @@ windows = { version = "0.58", features = [
     "Win32_Storage_StructuredStorage",
     "Win32_Graphics_Gdi",
     "Win32_System_Environment",
-    "ApplicationModel",
-    "ApplicationModel_Core",
-    "Management_Deployment",
-    "Foundation",
-    "Foundation_Collections",
-    "Storage_Streams",
+    "Win32_System_SystemServices",
 ] }
 log = "0.4"
 pinyin = "0.10"
-once_cell = "1"
